<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundcolor"

    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"

        android:text="@string/label_name"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/nomEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_firstname"
        android:textColor="@color/white"

        android:textSize="18sp" />

    <EditText
        android:id="@+id/prenomEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_firstname" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_age"
        android:textColor="@color/white"

        android:textSize="18sp" />

    <EditText
        android:id="@+id/ageEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_age"
        android:inputType="number" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_domain"
        android:textColor="@color/white"

        android:textSize="18sp" />

    <EditText
        android:id="@+id/domaineEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_etudiant" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_num"
        android:textColor="@color/white"

        android:textSize="18sp" />

    <EditText
        android:id="@+id/telephoneEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"


        android:hint="XXXXXXXXXX"
        android:inputType="phone" />

    <Button
        android:id="@+id/validerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:textColor="@color/white"
        android:text="@string/label_valider" />

</LinearLayout>